[gd_scene load_steps=15 format=3 uid="uid://b3ut4j5jl2dct"]

[ext_resource type="Script" path="res://Things/door.gd" id="1_i5vur"]
[ext_resource type="Texture2D" uid="uid://6x75b45f4vsp" path="res://Assets/main-spritesheet.png" id="1_je343"]
[ext_resource type="Texture2D" uid="uid://cccfjewo0jqs0" path="res://Assets/portal.png" id="3_k1gjo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nd685"]
radius = 38.96
height = 192.76

[sub_resource type="AtlasTexture" id="AtlasTexture_4rbhi"]
atlas = ExtResource("1_je343")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvo5v"]
atlas = ExtResource("1_je343")
region = Rect2(50, 17, 12, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2m38"]
atlas = ExtResource("1_je343")
region = Rect2(52, 2, 9, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5qyi"]
atlas = ExtResource("3_k1gjo")
region = Rect2(0, 0, 10, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oswm"]
atlas = ExtResource("3_k1gjo")
region = Rect2(10, 0, 10, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhrn7"]
atlas = ExtResource("3_k1gjo")
region = Rect2(20, 0, 10, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgwtk"]
atlas = ExtResource("3_k1gjo")
region = Rect2(30, 0, 10, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7qgt"]
atlas = ExtResource("3_k1gjo")
region = Rect2(40, 0, 10, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3w0p"]
atlas = ExtResource("3_k1gjo")
region = Rect2(50, 0, 10, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_ankja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5qyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oswm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhrn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgwtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7qgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3w0p")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Door" type="Node2D"]
script = ExtResource("1_i5vur")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_nd685")

[node name="Door" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_4rbhi")

[node name="Lock" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -98)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_jvo5v")

[node name="InteractionLabel" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -86)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_u2m38")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 18)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ankja")
autoplay = "default"
frame_progress = 0.892366

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
